refactor: update pnpm workspace configuration and clean up health DTOs
- Added 'unrs-resolver' to onlyBuiltDependencies in pnpm-workspace.yaml.
- Removed unnecessary GraphQL decorators from HealthDto and TestErrorDto.

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,7 @@
+minimumReleaseAge: 1440
+
 onlyBuiltDependencies:
   - '@nestjs/core'
   - '@prisma/client'
   - lefthook
-
-minimumReleaseAge: 1440 # 1 day
+  - unrs-resolver
