feat: enhance exception handling and object manipulation utilities
- Refactor ExceptionsFilter to improve error response structure and logging.
- Extend Object prototype with `exclude` and `delete` methods for object manipulation.
- Introduce CustomException class for custom error handling.
- Add Makefile for simplified project commands and Docker management.

--- a/compose.build.yml
+++ b/compose.build.yml
@@ -1,12 +1,12 @@
 services:
-  agritec_portal_name:
+  rest_template_name:
     build:
       context: .
       dockerfile: dockerfile.prod
-    image: agritec/template:1.0.0
+    image: drglasdou/rest_template:1.0.0
 
-  agritec_portal_latest:
+  rest_template_latest:
     build:
       context: .
       dockerfile: dockerfile.prod
-    image: agritec/template:latest
+    image: drglasdou/rest_template:latest
