--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -1,27 +1,6 @@
 services:
-  api:
-    container_name: api
-    image: agritec/template:latest
-    build:
-      context: .
-      dockerfile: dockerfile.prod
-    restart: always
-    env_file:
-      - .env
-    ports:
-      - '8080:3000'
-    depends_on:
-      - pg
-    networks:
-      - pg-network
-    healthcheck:
-      test:
-        ['CMD-SHELL', 'curl -f http://localhost:3000/api/v1/health || exit 1']
-      interval: 30s
-      timeout: 10s
-      retries: 5
-
-  pg:
+  rest_template_pg:
+    container_name: rest_template_pg
     image: postgres:17.6
     restart: always
     volumes:
@@ -29,20 +8,21 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_USER: ${PG_USER}
-      POSTGRES_PASSWORD: ${PG_PASSWORD}
-      POSTGRES_DB: ${PG_DB}
+      POSTGRES_USER: ${PG_USER:-postgres}
+      POSTGRES_PASSWORD: ${PG_PASSWORD:-Abcd@1234}
+      POSTGRES_DB: ${PG_DB:-rest_template_db}
     ports:
       - '5432:5432'
     networks:
-      - pg-network
+      - rest_template_network
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U ${PG_USER}']
       interval: 10s
       timeout: 5s
       retries: 5
 
-  pg_admin:
+  rest_template_pgadmin:
+    container_name: rest_template_pgadmin
     image: dpage/pgadmin4
     restart: always
     env_file:
@@ -53,11 +33,35 @@ services:
     ports:
       - '5050:80'
     depends_on:
-      - pg
+      rest_template_pg:
+        condition: service_healthy
     networks:
-      - pg-network
+      - rest_template_network
     healthcheck:
       test: ['CMD-SHELL', 'curl -f http://localhost/ || exit 1']
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
+  rest_template:
+    container_name: rest_template_api
+    image: drglasdou/rest_template:latest
+    build:
+      context: .
+      dockerfile: dockerfile.prod
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - '4000:3000'
+    depends_on:
+      rest_template_pg:
+        condition: service_healthy
+    networks:
+      - rest_template_network
+    healthcheck:
+      test:
+        ['CMD-SHELL', 'curl -f http://localhost:3000/api/v1/health || exit 1']
       interval: 30s
       timeout: 10s
       retries: 5
@@ -66,5 +70,5 @@ volumes:
   pg_data:
 
 networks:
-  pg-network:
+  rest_template_network:
     driver: bridge
