--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "@biomejs/biome": "2.2.4",
     "@commitlint/cli": "19.8.1",
     "@commitlint/config-conventional": "19.8.1",
-    "@eslint/eslintrc": "3.3.1",
-    "@eslint/js": "9.35.0",
     "@nestjs/cli": "11.0.10",
     "@nestjs/schematics": "11.0.7",
     "@nestjs/testing": "11.1.6",
@@ -49,13 +47,8 @@
     "@types/jest": "30.0.0",
     "@types/node": "24.5.0",
     "@types/supertest": "6.0.3",
-    "eslint": "9.35.0",
-    "eslint-config-prettier": "10.1.8",
-    "eslint-plugin-prettier": "5.5.4",
-    "globals": "16.4.0",
     "jest": "30.1.3",
     "lefthook": "1.13.0",
-    "prettier": "3.6.2",
     "prisma": "6.16.2",
     "source-map-support": "0.5.21",
     "supertest": "7.1.4",
@@ -63,7 +56,6 @@
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.9.2",
-    "typescript-eslint": "8.44.0"
+    "typescript": "5.9.2"
   }
 }
