--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -28,8 +28,8 @@ services:
     env_file:
       - .env
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@example.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-Abcd@1234}
     ports:
       - '5050:80'
     depends_on:
@@ -52,6 +52,8 @@ services:
     restart: always
     env_file:
       - .env
+    environment:
+      DATABASE_URL: postgresql://${PG_USER:-postgres}:${PG_PASSWORD:-Abcd@1234}@rest_template_pg:5432/${PG_DB:-rest_template_db}
     ports:
       - '4000:3000'
     depends_on:
