--- a/compose.build.yml
+++ b/compose.build.yml
@@ -1,12 +1,12 @@
 services:
-  rest_template_name:
+  todo_api_name:
     build:
       context: .
       dockerfile: dockerfile.prod
-    image: drglasdou/rest_template:${APP_VERSION:-1.0.0}
+    image: drglasdou/todo_api:${APP_VERSION:-1.0.0}
 
-  rest_template_latest:
+  todo_api_latest:
     build:
       context: .
       dockerfile: dockerfile.prod
-    image: drglasdou/rest_template:latest
+    image: drglasdou/todo_api:latest
