--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,6 @@
 services:
-  rest_template_pg:
-    container_name: rest_template_pg
+  todo_api_pg:
+    container_name: todo_api_pg
     image: postgres:17.6
     restart: always
     volumes:
@@ -10,19 +10,19 @@ services:
     environment:
       POSTGRES_USER: ${PG_USER:-postgres}
       POSTGRES_PASSWORD: ${PG_PASSWORD:-Abcd@1234}
-      POSTGRES_DB: ${PG_DB:-rest_template_db}
+      POSTGRES_DB: ${PG_DB:-todo_api_db}
     ports:
       - '5432:5432'
     networks:
-      - rest_template_network
+      - todo_api_network
     healthcheck:
       test: ['CMD-SHELL', 'pg_isready -U ${PG_USER}']
       interval: 10s
       timeout: 5s
       retries: 5
 
-  rest_template_pgadmin:
-    container_name: rest_template_pgadmin
+  todo_api_pgadmin:
+    container_name: todo_api_pgadmin
     image: dpage/pgadmin4
     restart: always
     env_file:
@@ -33,10 +33,10 @@ services:
     ports:
       - '5050:80'
     depends_on:
-      rest_template_pg:
+      todo_api_pg:
         condition: service_healthy
     networks:
-      - rest_template_network
+      - todo_api_network
     healthcheck:
       test: ['CMD-SHELL', 'curl -f http://localhost/ || exit 1']
       interval: 30s
@@ -47,5 +47,5 @@ volumes:
   pg_data:
 
 networks:
-  rest_template_network:
+  todo_api_network:
     driver: bridge
