--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:studio": "prisma studio --browser none"
   },
   "dependencies": {
     "@nestjs/common": "11.1.6",
     "@nestjs/core": "11.1.6",
     "@nestjs/platform-express": "11.1.6",
-    "@prisma/client": "6.16.2",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "7.2.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "dotenv": "17.2.2",
     "joi": "18.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2"
   },
@@ -46,10 +49,11 @@
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/node": "24.5.0",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "6.0.3",
     "jest": "30.1.3",
     "lefthook": "1.13.0",
-    "prisma": "6.16.2",
+    "prisma": "7.2.0",
     "source-map-support": "0.5.21",
     "supertest": "7.1.4",
     "ts-jest": "29.4.2",
