--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@nestjs/common": "11.1.6",
     "@nestjs/core": "11.1.6",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "11.1.6",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2.0",
@@ -60,6 +61,7 @@
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
+    "tsx": "^4.21.0",
     "typescript": "5.9.2"
   }
 }
