feat(todo): implement Todo module with CRUD operations, add CUID validation and exception handling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -39,5 +39,12 @@
     "**/prettier.config.*": true,
     "**/.eslintignore": true,
     "**/.prettierignore": true
+  },
+
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/dist": true,
+    "**/generated": true,
+    "**/migrations": true
   }
 }
