--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/2.2.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
-  "files": { "ignoreUnknown": false, "includes": ["src/**", "!**/schema.gql"] },
+  "files": { "ignoreUnknown": false, "includes": ["src/**", "!**/generated/**", "!**/*.prisma"] },
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
