--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "11.1.6",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "11.1.6",
+    "@paralleldrive/cuid2": "^3.1.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2.0",
     "class-transformer": "0.5.1",
