feat(auth): implement authentication module with controller and service feat(env): add session configuration to environment variables fix: update application module to include AuthModule and PrismaModule refactor: clean up unused imports in health, todo, and user modules refactor: enhance TypeScript configuration for better type management

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ DATABASE_URL=postgresql://postgres:your_password@localhost:5432/your_database
 # pgAdmin
 PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=admin_password
+
+# Session secret
+SESSION_SECRET=your_session_secret
+SESSION_COOKIE_NAME=offline_test
+SESSION_COOKIE_MAX_AGE=604800 # 7 days in seconds
