--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@paralleldrive/cuid2": "^3.1.0",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2.0",
+    "bcryptjs": "^3.0.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "dotenv": "17.2.2",
+    "iron-session": "^8.0.4",
     "joi": "18.0.1",
     "pg": "^8.16.3",
     "reflect-metadata": "0.2.2",
