--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,16 @@
       "prisma": ["./src/prisma/generated"],
       "prisma/*": ["./src/prisma/generated/*"]
     },
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ]
   },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
