--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "@nestjs/core": "11.1.6",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "11.1.6",
-    "@paralleldrive/cuid2": "^3.1.0",
-    "@prisma/adapter-pg": "^7.2.0",
+    "@paralleldrive/cuid2": "3.1.0",
+    "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "7.2.0",
-    "bcryptjs": "^3.0.3",
+    "bcryptjs": "3.0.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.2",
     "dotenv": "17.2.2",
-    "iron-session": "^8.0.4",
+    "iron-session": "8.0.4",
     "joi": "18.0.1",
-    "pg": "^8.16.3",
+    "pg": "8.16.3",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2"
   },
@@ -50,10 +50,11 @@
     "@nestjs/testing": "11.1.6",
     "@swc/cli": "0.7.8",
     "@swc/core": "1.13.5",
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/node": "24.5.0",
-    "@types/pg": "^8.16.0",
+    "@types/pg": "8.16.0",
     "@types/supertest": "6.0.3",
     "jest": "30.1.3",
     "lefthook": "1.13.0",
@@ -64,7 +65,7 @@
     "ts-loader": "9.5.4",
     "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "tsx": "^4.21.0",
+    "tsx": "4.21.0",
     "typescript": "5.9.2"
   }
 }
