feat(auth): implement session management and user authentication
- Added session middleware to manage user sessions using iron-session.
- Introduced AuthGuard and SessionGuard for protecting routes.
- Implemented login, logout, and registration functionalities in AuthController.
- Enhanced AuthService to handle user login and registration with proper error handling.
- Updated UserService to validate user credentials and manage user data.
- Added decorators for session and role-based access control.
- Created local strategy for Passport authentication.
- Updated Prisma schema to enforce unique usernames.
- Added TypeScript definitions for express and iron-session to include session data.
- Refactored user-related methods to improve clarity and maintainability.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint:check": "biome check .",
     "lint:fix": "biome check --write . && biome format --write .",
     "start": "nest start",
-    "start:dev": "nest start --watch",
+    "start:dev": "nest start --watch & prisma studio --browser none",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "test": "jest",
@@ -27,6 +27,7 @@
     "@nestjs/common": "11.1.6",
     "@nestjs/core": "11.1.6",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "11.1.6",
     "@paralleldrive/cuid2": "3.1.0",
     "@prisma/adapter-pg": "7.2.0",
@@ -37,6 +38,7 @@
     "dotenv": "17.2.2",
     "iron-session": "8.0.4",
     "joi": "18.0.1",
+    "passport-local": "^1.0.0",
     "pg": "8.16.3",
     "reflect-metadata": "0.2.2",
     "rxjs": "7.8.2"
@@ -54,6 +56,7 @@
     "@types/express": "5.0.3",
     "@types/jest": "30.0.0",
     "@types/node": "24.5.0",
+    "@types/passport-local": "^1.0.38",
     "@types/pg": "8.16.0",
     "@types/supertest": "6.0.3",
     "jest": "30.1.3",
