chore(release): update changelog and version to v1.0.0+1
- Added TodoModule entry to changelog (Commit: e6144b2)
- Bumped version to 1.0.0+1 in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rest",
-  "version": "1.0.0",
+  "version": "1.0.0+1",
   "description": "Nest REST template",
   "author": "dr.glasdou",
   "private": true,
