--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ STAGE=dev
 # PostgreSQL
 PG_USER=postgres
 PG_PASSWORD=your_password
-POSTGRES_DB=your_database
+PG_DB=your_database
 DATABASE_URL=postgresql://postgres:your_password@localhost:5432/your_database
 
 # pgAdmin
