--- a/compose.prod.yml
+++ b/compose.prod.yml
@@ -21,11 +21,7 @@ services:
     networks:
       - todo_api_network
     healthcheck:
-      test:
-        [
-          'CMD-SHELL',
-          'curl -f -X POST -H "Content-Type: application/json" -d ''{"query":"query HealthCheck { healthCheck { message } }"}'' http://localhost:4000/v1/gql || exit 1',
-        ]
+      test: ['CMD-SHELL', 'curl -f http://localhost/api/v1/health || exit 1']
       interval: 30s
       timeout: 10s
       retries: 5
